fixed focus error with toggling search page.  changed placeholder in search fields.  fixed width in primary menu searchfield so placeholder is visible

--- a/themes/inhabitant/sass/_elements.scss
+++ b/themes/inhabitant/sass/_elements.scss
@@ -193,16 +193,17 @@ body.search div.site-content, body.error404 div.site-content {
 	}
 	div.page-content{
 		margin-top: 0;
-		padding-top: 120px;
-		padding-top: 90px;
+	}
+	article.page {
+		margin-right: 60px;
+		margin-top: 60px;
 	}
 	#primary {
 		width: 70%;
 		position: relative;
+		margin-top: 80px;
 		fieldset {
-			border-left: none;
-			border-right: none;
-			border-bottom: none;
+			border: none;
 			padding-left: 0;
 			margin-left: 0;
 		}
@@ -216,8 +217,8 @@ body.search div.site-content, body.error404 div.site-content {
 		h1.page-title {
 			text-transform: uppercase;
 			font-size: 2.4rem;
-			margin: 100px 0 20px 0;
 			padding-bottom: 20px;
+			margin-bottom: 0;
 			border-bottom: 1px solid $color__border;
 		}
 		h2.entry-title {
@@ -247,7 +248,6 @@ body.search div.site-content, body.error404 div.site-content {
 				}
 			}
 		}
-
 		div.entry-meta {
 			position: relative;
 			color: black;
@@ -259,11 +259,10 @@ body.search div.site-content, body.error404 div.site-content {
 			width: 100%;
 			top: 0;
 		}
-		article.page {
-			margin-right: 60px;
-		}
-		article.post {
-			margin-top: 60px;
+		div.entry-summary {
+			font-family: Merriweather;
+			line-height: 1.75;
+			font-size: .95rem;
 		}
 	}
 }
