--- a/themes/inhabitant/sass/_navigation.scss
+++ b/themes/inhabitant/sass/_navigation.scss
@@ -85,6 +85,7 @@ div#primary-menu {
 				background-color: rgba(0, 0, 0, 0);
 				border: 0;
 				padding: 12px;
+				width: 100%;
 				&:focus {
 					outline: none;
 				}
